--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1350,3 +1350,9 @@ blockquote:not(:last-child) {
 .social li:last-child a {
   padding-right: 0;
 }
+.white-bg {
+  background: #ffffff;
+}
+.black-bg {
+  background: #000000;
+}
